--- a/package.json
+++ b/package.json
@@ -12,13 +12,23 @@
     "@testing-library/user-event": "^13.5.0",
     "@themesberg/react-bootstrap": "^1.4.1",
     "aos": "^2.3.4",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.6",
+    "framer-motion": "^12.23.0",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.539.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.0",
+    "react-intersection-observer": "^9.16.0",
+    "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
+    "react-simple-typewriter": "^5.0.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.17"
   }
 }
