--- a/Infinex/.env
+++ b/Infinex/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=http://localhost:4100
+# REACT_APP_API_URL=http://localhost:4100
+REACT_APP_API_URL=https://infinex-site-server-3gs4.vercel.app/
